change footer icons from img to span. Fixed service col, added better nav collapsing

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,9 +7,9 @@
 
 body {
     font-family: 'Source Serif Pro', serif;
-    background-image: url("../images/background_header.png");
-    background-repeat: no-repeat;
-    background-position: top;
+    /*background-image: url("../images/background_header.png");*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: top;*/
 }
 
 html {
@@ -49,6 +49,7 @@ nav {
 }
 
 #home {
+    position: relative;
     background-image: linear-gradient(180deg, rgba(234, 240, 235, 0) 82%, #EDF3EE 90%), url("../images/background_header.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -57,6 +58,7 @@ nav {
     height: 78vh;
     line-height: 3rem;
     font-size: x-large;
+    overflow: hidden;
 }
 
 .introduction {
@@ -307,8 +309,10 @@ footer .footer-text-header {
     }
 
     .introduction {
+        position: absolute;
         place-content: start;
-        padding: 8rem 16.438rem 0 19.5rem;
+        top: 22rem;
+        left: 16.438rem;
     }
 
     .introduction h1 {
@@ -403,8 +407,8 @@ footer .footer-text-header {
 
     .footer-row-1 {
         margin-bottom: 9.688rem;
+        /*gap: 42.25rem;*/
     }
-
 }
 
 /*
@@ -428,6 +432,11 @@ footer .footer-text-header {
         gap: 1.25rem;
     }
 
+    .nav-link {
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }
+
     .nav-container.scrolled {
         background-color: #fff !important;
         transition: background-color 200ms linear;
@@ -446,15 +455,16 @@ footer .footer-text-header {
     }
 
     .introduction {
+        position: absolute;
         place-content: start;
-        padding: 8rem 0 0 14rem;
+        top: 12rem;
+        left: 16.438rem;
     }
 
     .introduction h1 {
         font-weight: 700;
         font-size: 6rem;
         line-height: 9.375rem;
-        text-align: left;
         letter-spacing: -0.021em;
     }
 
@@ -529,7 +539,7 @@ footer .footer-text-header {
     }
 
     footer {
-        padding: 6.313rem 6.813rem 6.313rem 7.5rem;
+        padding: 6rem 3rem 6rem 5rem;
     }
 
     .footer-row-1 {
@@ -546,9 +556,18 @@ footer .footer-text-header {
 @media (min-width: 768px) and (max-width: 1024px) {
 
     /* CSS */
-    #home {
-        overflow: hidden;
-        position: relative;
+     .nav-container {
+        padding: .5rem 4.5rem;
+        gap: 1.25rem;
+    }
+
+    .nav-link {
+        font-size: 1rem;
+        line-height: 1.5rem;
+    }
+
+    .navbar-nav {
+        gap: 1rem;
     }
 
     .introduction {
@@ -621,17 +640,12 @@ footer .footer-text-header {
     }
 
     .footer-row-1 {
-        gap: 4rem;
         margin-bottom: 5rem;
     }
 
     .footer-logo img {
         width: 227px;
         height: 77px;
-    }
-
-    .footer-contact {
-        justify-content: end;
     }
 }
 
@@ -643,11 +657,6 @@ footer .footer-text-header {
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
     /* CSS */
-    #home {
-        overflow: hidden;
-        position: relative;
-    }
-
     .introduction {
         position: absolute;
         top: 9rem;
@@ -725,11 +734,6 @@ footer .footer-text-header {
 
     .navbar-nav {
         gap: 1.25rem;
-    }
-
-    #home {
-        overflow: hidden;
-        position: relative;
     }
 
     .introduction {
@@ -831,6 +835,11 @@ footer .footer-text-header {
         height: 77px;
     }
 
+    .icon {
+        width: 1.25rem;
+        height: 1.25rem;
+    }
+
 }
 
 /*
@@ -849,11 +858,6 @@ footer .footer-text-header {
 
     .navbar-nav {
         gap: 1.25rem;
-    }
-
-    #home {
-        overflow: hidden;
-        position: relative;
     }
 
     .introduction {
